--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,9 +1,10 @@
 name: python-app
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: 
+on:
   push:
-    branches:
-      - main
+    # Sequence of patterns matched against refs/tags
+    tags:
+      - '*_*.*.*'
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
