--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,6 +1,3 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
 name: Python application
 
 on:
@@ -8,9 +5,6 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
-permissions:
-  contents: read
 
 jobs:
   build:
@@ -31,7 +25,8 @@ jobs:
         pip install pipenv
     - name: Install Dependencies
       run: |
-        pipenv install --ignore-pipfile  # Pipfile.lock 무시하고 의존성 설치
-    - name: build
+        pipenv lock  # Generate a lock file if not present
+        pipenv sync
+    - name: Run Tests and Linting
       run: |
-        python main.py
+        pipenv run python main.py  # Adjust the command as needed
