--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -13,10 +13,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.9
+    - name: Clean Python cache
+      run: |
+        rm -rf ~/.local/share/virtualenvs
+    - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: 3.10
+
     - name: pip Update
       run: |
         python -m pip install --upgrade pip
