--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,7 +28,7 @@ jobs:
       run: |
         pipenv lock  # Generate a lock file if not present
         pipenv install --deploy --ignore-pipfile --python /opt/hostedtoolcache/Python/3.10.9/x64/bin/python3.10
-    - name: Run Tests and Linting
+    - name: Run Tests
       run: |
         pipenv run python main.py  # Adjust the command as needed
-        
+
