chore : 매인 브랜치는 깔끔하게
매인 브랜치에는 완성본만 올리게 하기위해 dev/github 브랜치에 푸쉬해도 되게 변경

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -2,7 +2,10 @@ name: Python application
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ 
+      "main",
+      "dev/github"
+    ]
   pull_request:
     branches: [ "main" ]
 
