--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,18 @@ repositories {
     mavenCentral()
 }
 
+tasks.withType(JavaCompile){
+    options.encoding = "UTF-8"
+}
+
 import org.gradle.internal.os.OperatingSystem
 
-project.ext.lwjglVersion = "3.3.6"
-project.ext.jomlVersion = "1.10.7"
+// 버전 변수 선언
+project.ext {
+    lwjglVersion = "3.3.6"
+    jomlVersion = "1.10.7"
+    jsonVersion = "20230227" // org.json 버전 변수 추가
+}
 
 switch (OperatingSystem.current()) {
     case OperatingSystem.LINUX:
@@ -37,8 +45,6 @@ switch (OperatingSystem.current()) {
                 : "natives-windows-x86"
         break
 }
-
-
 
 dependencies {
     implementation platform("org.lwjgl:lwjgl-bom:$lwjglVersion")
@@ -70,6 +76,9 @@ dependencies {
     runtimeOnly "org.lwjgl:lwjgl-stb::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-zstd::$lwjglNatives"
     implementation "org.joml:joml:${jomlVersion}"
+
+    // JSON 라이브러리 추가 (버전 변수 사용)
+    implementation "org.json:json:${jsonVersion}"
 }
 
 test {
