--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,6 @@ repositories {
     mavenCentral()
 }
 
-tasks.withType(JavaCompile){
-    options.encoding = "UTF-8"
-}
-
 import org.gradle.internal.os.OperatingSystem
 
 // 버전 변수 선언
@@ -51,32 +47,21 @@ dependencies {
 
     implementation "org.lwjgl:lwjgl"
     implementation "org.lwjgl:lwjgl-assimp"
-    implementation "org.lwjgl:lwjgl-freetype"
     implementation "org.lwjgl:lwjgl-glfw"
-    implementation "org.lwjgl:lwjgl-libdivide"
-    implementation "org.lwjgl:lwjgl-msdfgen"
     implementation "org.lwjgl:lwjgl-nuklear"
     implementation "org.lwjgl:lwjgl-openal"
     implementation "org.lwjgl:lwjgl-opengl"
-    implementation "org.lwjgl:lwjgl-par"
-    implementation "org.lwjgl:lwjgl-remotery"
     implementation "org.lwjgl:lwjgl-stb"
     implementation "org.lwjgl:lwjgl-zstd"
     runtimeOnly "org.lwjgl:lwjgl::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-assimp::$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-freetype::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-glfw::$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-libdivide::$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-msdfgen::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-nuklear::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-openal::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-opengl::$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-par::$lwjglNatives"
-    runtimeOnly "org.lwjgl:lwjgl-remotery::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-stb::$lwjglNatives"
     runtimeOnly "org.lwjgl:lwjgl-zstd::$lwjglNatives"
     implementation "org.joml:joml:${jomlVersion}"
-
     // JSON 라이브러리 추가 (버전 변수 사용)
     implementation "org.json:json:${jsonVersion}"
 }
@@ -85,4 +70,15 @@ test {
     useJUnitPlatform()
 }
 
-mainClassName = 'dev.sinoka.Main'
+application {
+    mainClass = 'dev.sinoka.Main'
+    applicationDefaultJvmArgs = ["-XX:+CrashOnOutOfMemoryError", "-XX:ErrorFile=C:/CrashDumps/hs_err_pid%p.log"]
+}
+run {
+    jvmArgs = ['-Xms512m', '-Xmx2048m', '-Dorg.lwjgl.util.Debug=true']
+}
+jar {
+    manifest {
+        attributes 'Main-Class': 'dev.sinoka.Main'
+    }
+}
